# python-code-review-environment

./: .dockerignore  .gitignore  Dockerfile  Project.md  README.md  REWARD_SYSTEM_GUIDE.md  __init__.py  client.py  compat.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
graders/: __init__.py  common.py  optimization.py  pytest_runner.py  syntax.py
python_code_review_env/: __init__.py  client.py
python_code_review_env/envs/: __init__.py
python_code_review_env/envs/python_env_env/: __init__.py  client.py  models.py  openenv.yaml
python_code_review_env/envs/python_env_env/graders/: __init__.py  common.py  optimization.py  pytest_runner.py  syntax.py
python_code_review_env/envs/python_env_env/server/: __init__.py  app.py  env.py
python_code_review_env/envs/python_env_env/tasks/: __init__.py  task_bank.py
server/: Dockerfile  __init__.py  app.py  code_review_env_environment.py  code_review_environment.py  compat.py  env.py  env_safe.py  models.py  python_env_environment.py  requirements.txt  task_bank.py
server/graders/: __init__.py  common.py  optimization.py  pytest_runner.py  syntax.py
server/tasks/: __init__.py  task_bank.py
tasks/: __init__.py  task_bank.py
tests/: test_api.py  test_environment.py  test_examples.py  test_inference.py  test_inference_output.py  test_reward_dynamics.py
